# vbemu

./: .gitignore  .nvimrc  CMakeLists.txt  Makefile  README.md
src/: arguments.c  arguments.h  log.h  main.c  main.h  verbose.c  verbose.h
src/chip8/: cpu.c  cpu.h  interp.c  interp.h  memory.c  memory.h  ram.c  ram.h
src/gb/: configuration.c  configuration.h  cpu.c  cpu.h  gameboy.c  gameboy.h  handler.h  ram.c  ram.h
src/gb/clock/: clock.c  clock.h
src/gb/cpu/: cpu.c  cpu.h
src/gb/gfx/: gfx.h
src/gb/input/: input.c  input.h
src/gb/window/: window.c  window.h
